<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300.0dip"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical" >

    <ir.pegahtech.neveshtanak.styledview.StyledTextView
        android:id="@+id/lbl_dialog_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_header"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:padding="10.0dip"
        android:text="@string/select_username"
        android:textColor="@color/neveshtanak_edit_text"
        android:textIsSelectable="false"
        android:textSize="16.0sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/neveshtanak_divider" />

    <LinearLayout
        android:id="@+id/faces_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="4.0dip"
        android:layout_marginRight="4.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/faces_layout_pic"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ir.pegahtech.neveshtanak.styledview.StyledEditText
                android:id="@+id/lbl_dialog_text_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center|right"
                android:padding="8.0dip"
                android:maxLength="50"
                android:hint="@string/username_hint_persian"
                android:textColor="@color/neveshtanak_edit_text"
                android:textSize="16.0sp" />

            <ir.pegahtech.neveshtanak.styledview.StyledTextView
                android:id="@+id/lbl_dialog_text_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:gravity="center|right"
                android:padding="8.0dip"
                android:text="@string/username_hint_english"
                android:textColor="@color/neveshtanak_edit_text"
                android:textSize="16.0sp" />
        </LinearLayout>

        <ImageView
            android:id="@id/image"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_gravity="center_vertical"
            android:layout_margin="8.0dip"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusableInTouchMode="false"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_user" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/neveshtanak_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ir.pegahtech.neveshtanak.styledview.StyledButton
            android:id="@+id/btn_cancel"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@drawable/blue_button_selector"
            android:gravity="center"
            android:minHeight="@dimen/action_bar_height"
            android:padding="10.0dip"
            android:text="نه! نمیخام"
            android:textColor="@color/white_button_text_color_selector"
            android:textSize="14.0sp" />

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="@color/neveshtanak_divider" />

        <ir.pegahtech.neveshtanak.styledview.StyledButton
            android:id="@+id/btn_ok"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@drawable/blue_button_selector"
            android:gravity="center"
            android:minHeight="@dimen/action_bar_height"
            android:padding="10.0dip"
            android:text="اوکی"
            android:textColor="@color/white_button_text_color_selector"
            android:textSize="14.0sp" />
    </LinearLayout>

</LinearLayout>